# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-4e1dd5f5/example-4e1dd5f5-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_4e1dd5f5"]
        
        [project]
        name = "example-4e1dd5f5"
        version = "0.0.0"
        dependencies = [
            "example-a-4e1dd5f5",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/example-4e1dd5f5-0.0.0/src/example_4e1dd5f5/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-4e1dd5f5/example-a-4e1dd5f5-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_4e1dd5f5"]
        
        [project]
        name = "example-a-4e1dd5f5"
        version = "1.0.0"
        dependencies = [
            "example-b-4e1dd5f5>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/example-a-4e1dd5f5-1.0.0/src/example_a_4e1dd5f5/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-4e1dd5f5/example-b-4e1dd5f5-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_4e1dd5f5"]
        
        [project]
        name = "example-b-4e1dd5f5"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/example-b-4e1dd5f5-1.0.0/src/example_b_4e1dd5f5/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-4e1dd5f5/example-b-4e1dd5f5-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_4e1dd5f5"]
        
        [project]
        name = "example-b-4e1dd5f5"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/example-b-4e1dd5f5-2.0.0/src/example_b_4e1dd5f5/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-4e1dd5f5/example-b-4e1dd5f5-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_4e1dd5f5"]
        
        [project]
        name = "example-b-4e1dd5f5"
        version = "3.0.0"
        dependencies = [
            "example-c-4e1dd5f5",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/example-b-4e1dd5f5-3.0.0/src/example_b_4e1dd5f5/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-4e1dd5f5/example_4e1dd5f5-0.0.0.tar.gz': 'md5:e8c71186181a0dd0e7584fde2fd21a09',
      'dist/example-4e1dd5f5/example_a_4e1dd5f5-1.0.0-py3-none-any.whl': 'md5:a4570e63690e9805512d50d439713375',
      'dist/example-4e1dd5f5/example_a_4e1dd5f5-1.0.0.tar.gz': 'md5:1b2debb10ffecdfe8190887626a4dc6f',
      'dist/example-4e1dd5f5/example_b_4e1dd5f5-1.0.0-py3-none-any.whl': 'md5:cd8ca1c9c5288512b9a9eaf3aa89cd1e',
      'dist/example-4e1dd5f5/example_b_4e1dd5f5-1.0.0.tar.gz': 'md5:f9d61adc33ddb3adbd9f9fb3e1b51014',
      'dist/example-4e1dd5f5/example_b_4e1dd5f5-2.0.0-py3-none-any.whl': 'md5:c581f824f68bb3ea2ad9c51f2c3a0818',
      'dist/example-4e1dd5f5/example_b_4e1dd5f5-2.0.0.tar.gz': 'md5:1ff28ab7abab24893a66eb57a00cbdee',
      'dist/example-4e1dd5f5/example_b_4e1dd5f5-3.0.0-py3-none-any.whl': 'md5:b678d8a6594598d8ffc9d984151f11a7',
      'dist/example-4e1dd5f5/example_b_4e1dd5f5-3.0.0.tar.gz': 'md5:d545f7bca232bed4f0a8277b95d53c3f',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-4e1dd5f5
        │       ├── example-4e1dd5f5-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_4e1dd5f5
        │       │           └── __init__.py
        │       ├── example-a-4e1dd5f5-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_4e1dd5f5
        │       │           └── __init__.py
        │       ├── example-b-4e1dd5f5-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_4e1dd5f5
        │       │           └── __init__.py
        │       ├── example-b-4e1dd5f5-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_4e1dd5f5
        │       │           └── __init__.py
        │       └── example-b-4e1dd5f5-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_4e1dd5f5
        │                   └── __init__.py
        └── dist
            └── example-4e1dd5f5
                ├── example_4e1dd5f5-0.0.0.tar.gz
                ├── example_a_4e1dd5f5-1.0.0-py3-none-any.whl
                ├── example_a_4e1dd5f5-1.0.0.tar.gz
                ├── example_b_4e1dd5f5-1.0.0-py3-none-any.whl
                ├── example_b_4e1dd5f5-1.0.0.tar.gz
                ├── example_b_4e1dd5f5-2.0.0-py3-none-any.whl
                ├── example_b_4e1dd5f5-2.0.0.tar.gz
                ├── example_b_4e1dd5f5-3.0.0-py3-none-any.whl
                └── example_b_4e1dd5f5-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-4e1dd5f5
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-4e1dd5f5
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-4e1dd5f5' in directory 'build/example-4e1dd5f5'
      Destination directory '[PWD]/build/example-4e1dd5f5' already exists. Pass `--rm` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 0,
    'stderr': '<not included>',
    'stdout': '''
      example-4e1dd5f5
  
    ''',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-4e1dd5f5/a-4e1dd5f5-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_4e1dd5f5"]
        
        [project]
        name = "a-4e1dd5f5"
        version = "1.0.0"
        dependencies = [
            "b-4e1dd5f5>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/a-4e1dd5f5-1.0.0/src/a_4e1dd5f5/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-4e1dd5f5/b-4e1dd5f5-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_4e1dd5f5"]
        
        [project]
        name = "b-4e1dd5f5"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/b-4e1dd5f5-1.0.0/src/b_4e1dd5f5/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-4e1dd5f5/b-4e1dd5f5-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_4e1dd5f5"]
        
        [project]
        name = "b-4e1dd5f5"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/b-4e1dd5f5-2.0.0/src/b_4e1dd5f5/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-4e1dd5f5/b-4e1dd5f5-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_4e1dd5f5"]
        
        [project]
        name = "b-4e1dd5f5"
        version = "3.0.0"
        dependencies = [
            "c-4e1dd5f5",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/b-4e1dd5f5-3.0.0/src/b_4e1dd5f5/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-4e1dd5f5/example-4e1dd5f5-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_4e1dd5f5"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_4e1dd5f5"]
        
        [project]
        name = "example-4e1dd5f5"
        version = "0.0.0"
        dependencies = [
            "a-4e1dd5f5",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-4e1dd5f5/example-4e1dd5f5-0.0.0/src/example_4e1dd5f5/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-4e1dd5f5/a_4e1dd5f5-1.0.0-py3-none-any.whl': 'md5:673b64426901d783a56f505f58cff346',
      'dist/example-4e1dd5f5/a_4e1dd5f5-1.0.0.tar.gz': 'md5:eaf0ea34a3b375efd8de9aabcb8e2ee9',
      'dist/example-4e1dd5f5/b_4e1dd5f5-1.0.0-py3-none-any.whl': 'md5:f3016b5ae4b13fd25b10f4f3ad9f23bd',
      'dist/example-4e1dd5f5/b_4e1dd5f5-1.0.0.tar.gz': 'md5:512eff30a218b2bea6601677e7f38535',
      'dist/example-4e1dd5f5/b_4e1dd5f5-2.0.0-py3-none-any.whl': 'md5:0d50165959563453d29eb1fed539f4c8',
      'dist/example-4e1dd5f5/b_4e1dd5f5-2.0.0.tar.gz': 'md5:f6171435bb6ebcb4af8074172026c139',
      'dist/example-4e1dd5f5/b_4e1dd5f5-3.0.0-py3-none-any.whl': 'md5:ff1b0dea5eacf9be4b72e9168b8b1de0',
      'dist/example-4e1dd5f5/b_4e1dd5f5-3.0.0.tar.gz': 'md5:fbf1b6a81b61270dba1e7650280c31c3',
      'dist/example-4e1dd5f5/example_4e1dd5f5-0.0.0.tar.gz': 'md5:0291e04be286e248f5a63b3adf18812c',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-4e1dd5f5
        │       ├── a-4e1dd5f5-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_4e1dd5f5
        │       │           └── __init__.py
        │       ├── b-4e1dd5f5-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_4e1dd5f5
        │       │           └── __init__.py
        │       ├── b-4e1dd5f5-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_4e1dd5f5
        │       │           └── __init__.py
        │       ├── b-4e1dd5f5-3.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_4e1dd5f5
        │       │           └── __init__.py
        │       └── example-4e1dd5f5-0.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_4e1dd5f5
        │                   └── __init__.py
        └── dist
            └── example-4e1dd5f5
                ├── a_4e1dd5f5-1.0.0-py3-none-any.whl
                ├── a_4e1dd5f5-1.0.0.tar.gz
                ├── b_4e1dd5f5-1.0.0-py3-none-any.whl
                ├── b_4e1dd5f5-1.0.0.tar.gz
                ├── b_4e1dd5f5-2.0.0-py3-none-any.whl
                ├── b_4e1dd5f5-2.0.0.tar.gz
                ├── b_4e1dd5f5-3.0.0-py3-none-any.whl
                ├── b_4e1dd5f5-3.0.0.tar.gz
                └── example_4e1dd5f5-0.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-4e1dd5f5
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-38b4ff36/example-38b4ff36-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_38b4ff36"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_38b4ff36"]
        
        [project]
        name = "example-38b4ff36"
        version = "0.0.0"
        dependencies = [
            "example-a-38b4ff36",
        ]
        requires-python = ">=3.8"
        description = "This is an example scenario, in which the user depends on a single package `a` which requires `b`."
        
        [project.optional-dependencies]
  
      ''',
      'build/example-38b4ff36/example-38b4ff36-0.0.0/src/example_38b4ff36/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-38b4ff36/example-a-38b4ff36-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_38b4ff36"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_38b4ff36"]
        
        [project]
        name = "example-a-38b4ff36"
        version = "1.0.0"
        dependencies = [
            "example-b-38b4ff36>1.0.0",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-38b4ff36/example-a-38b4ff36-1.0.0/src/example_a_38b4ff36/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-38b4ff36/example-b-38b4ff36-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_38b4ff36"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_38b4ff36"]
        
        [project]
        name = "example-b-38b4ff36"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-38b4ff36/example-b-38b4ff36-1.0.0/src/example_b_38b4ff36/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-38b4ff36/example-b-38b4ff36-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_38b4ff36"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_38b4ff36"]
        
        [project]
        name = "example-b-38b4ff36"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-38b4ff36/example-b-38b4ff36-2.0.0/src/example_b_38b4ff36/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-38b4ff36/example-b-38b4ff36-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_38b4ff36"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_38b4ff36"]
        
        [project]
        name = "example-b-38b4ff36"
        version = "3.0.0"
        dependencies = [
            "example-c-38b4ff36",
        ]
        requires-python = ">=3.8"
        description = ""
        
        [project.optional-dependencies]
  
      ''',
      'build/example-38b4ff36/example-b-38b4ff36-3.0.0/src/example_b_38b4ff36/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-38b4ff36/example_38b4ff36-0.0.0.tar.gz': 'md5:faa2bf7d56e36e76a30eee74101fd5f7',
      'dist/example-38b4ff36/example_a_38b4ff36-1.0.0-py3-none-any.whl': 'md5:a7f9ced95fa5062095cbc4577fa39cb3',
      'dist/example-38b4ff36/example_a_38b4ff36-1.0.0.tar.gz': 'md5:6338324026986b01339bcd880e3fb84f',
      'dist/example-38b4ff36/example_b_38b4ff36-1.0.0-py3-none-any.whl': 'md5:08f4de0bad3b281ab5bcd6fea9b8e739',
      'dist/example-38b4ff36/example_b_38b4ff36-1.0.0.tar.gz': 'md5:7f45494b0b0c5a40fa89616d295e4619',
      'dist/example-38b4ff36/example_b_38b4ff36-2.0.0-py3-none-any.whl': 'md5:09ca59ad58ca5aac4564201627f163a2',
      'dist/example-38b4ff36/example_b_38b4ff36-2.0.0.tar.gz': 'md5:e82d99479a314f27504e1559ef1f8873',
      'dist/example-38b4ff36/example_b_38b4ff36-3.0.0-py3-none-any.whl': 'md5:efeb0b649eefdb975b24feca7b2571d3',
      'dist/example-38b4ff36/example_b_38b4ff36-3.0.0.tar.gz': 'md5:4894ade9b7167c2ae87611cf3dc125c7',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-38b4ff36
        │       ├── example-38b4ff36-0.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_38b4ff36
        │       │           └── __init__.py
        │       ├── example-a-38b4ff36-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_38b4ff36
        │       │           └── __init__.py
        │       ├── example-b-38b4ff36-1.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_38b4ff36
        │       │           └── __init__.py
        │       ├── example-b-38b4ff36-2.0.0
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_38b4ff36
        │       │           └── __init__.py
        │       └── example-b-38b4ff36-3.0.0
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_38b4ff36
        │                   └── __init__.py
        └── dist
            └── example-38b4ff36
                ├── example_38b4ff36-0.0.0.tar.gz
                ├── example_a_38b4ff36-1.0.0-py3-none-any.whl
                ├── example_a_38b4ff36-1.0.0.tar.gz
                ├── example_b_38b4ff36-1.0.0-py3-none-any.whl
                ├── example_b_38b4ff36-1.0.0.tar.gz
                ├── example_b_38b4ff36-2.0.0-py3-none-any.whl
                ├── example_b_38b4ff36-2.0.0.tar.gz
                ├── example_b_38b4ff36-3.0.0-py3-none-any.whl
                └── example_b_38b4ff36-3.0.0.tar.gz
        
        19 directories, 19 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-38b4ff36
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--rm] [--short-names] [--skip-root] [-v] [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
